--- a/src/pretix/presale/templates/pretixpresale/event/checkout_base.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_base.html
@@ -3,28 +3,26 @@
 {% load bootstrap3 %}
 {% block title %}{% trans "Checkout" %}{% endblock %}
 {% block content %}
-    <div class="panel panel-default cart">
-        <div class="panel-heading">
+    <details class="panel panel-default cart">
+        <summary class="panel-heading">
             <h3 class="panel-title">
-                <a class="collapsed" data-toggle="collapse" href="#cart">
-                    <span>
-                        <i class="fa fa-shopping-cart"></i>
-                        <strong>{% trans "Your cart" %}</strong>
-                    </span>
-                    <span>
-                        <strong id="cart-deadline-short" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
-                            {% if cart.minutes_left > 0 or cart.seconds_left > 0 %}
-                                {{ cart.minutes_left|stringformat:"02d" }}:{{ cart.seconds_left|stringformat:"02d" }}
-                            {% else %}
-                                {% trans "Cart expired" %}
-                            {% endif %}
-                        </strong>
-                        <i class="fa fa-angle-down collapse-indicator"></i>
-                    </span>
-                </a>
+                <span>
+                    <i class="fa fa-shopping-cart"></i>
+                    <strong>{% trans "Your cart" %}</strong>
+                </span>
+                <span>
+                    <strong id="cart-deadline-short" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
+                        {% if cart.minutes_left > 0 or cart.seconds_left > 0 %}
+                            {{ cart.minutes_left|stringformat:"02d" }}:{{ cart.seconds_left|stringformat:"02d" }}
+                        {% else %}
+                            {% trans "Cart expired" %}
+                        {% endif %}
+                    </strong>
+                    <i class="fa fa-angle-down collapse-indicator"></i>
+                </span>
             </h3>
-        </div>
-        <div class="panel-collapse collapse" id="cart">
+        </summary>
+        <div>
             <div class="panel-body">
                 {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event %}
                 <em id="cart-deadline" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
@@ -38,7 +36,7 @@
                 </em>
             </div>
         </div>
-    </div>
+    </details>
     <h2>{% trans "Checkout" %}</h2>
     {% include "pretixpresale/event/fragment_checkoutflow.html" %}
     {% block inner %}
