--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -16,28 +16,26 @@
         </script>
     {% endautoescape %}
     {% if show_cart %}
-        <div class="panel panel-primary cart">
-            <div class="panel-heading">
+        <details class="panel panel-primary cart" open>
+            <summary class="panel-heading">
                 <h3 class="panel-title">
-                    <a class="collapsed" data-toggle="collapse" href="#cart">
-                        <span>
-                            <i class="fa fa-shopping-cart"></i>
-                            <strong>{% trans "Your cart" %}</strong>
-                        </span>
-                        <span>
-                            <strong id="cart-deadline-short" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
-                                {% if cart.minutes_left > 0 or cart.seconds_left > 0 %}
-                                    {{ cart.minutes_left|stringformat:"02d" }}:{{ cart.seconds_left|stringformat:"02d" }}
-                                {% else %}
-                                    {% trans "Cart expired" %}
-                                {% endif %}
-                            </strong>
-                            <i class="fa fa-angle-down collapse-indicator"></i>
-                        </span>
-                    </a>
+                    <span>
+                        <i class="fa fa-shopping-cart"></i>
+                        <strong>{% trans "Your cart" %}</strong>
+                    </span>
+                    <span>
+                        <strong id="cart-deadline-short" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
+                            {% if cart.minutes_left > 0 or cart.seconds_left > 0 %}
+                                {{ cart.minutes_left|stringformat:"02d" }}:{{ cart.seconds_left|stringformat:"02d" }}
+                            {% else %}
+                                {% trans "Cart expired" %}
+                            {% endif %}
+                        </strong>
+                        <i class="fa fa-angle-down collapse-indicator"></i>
+                    </span>
                 </h3>
-            </div>
-            <div class="panel-collapse collapse in" id="cart">
+            </summary>
+            <div>
                 <div class="panel-body">
                     {% include "pretixpresale/event/fragment_cart.html" with cart=cart event=request.event editable=True %}
                     <em id="cart-deadline" data-expires="{{ cart.first_expiry|date:"Y-m-d H:i:sO" }}">
@@ -79,7 +77,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </details>
     {% endif %}
 
     {% if show_dates %}
