Make divider-OR translateable

--- a/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
+++ b/src/pretix/plugins/stripe/templates/pretixplugins/stripe/checkout_payment_form.html
@@ -40,7 +40,7 @@
       <div class="col-md-1 hidden">
         <div class="hr">
           <div class="sep">
-            <div class="sepText">OR</div>
+            <div class="sepText">{% trans "OR" %}</div>
           </div>
         </div>
       </div>
