--- a/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_addons.html
@@ -9,7 +9,7 @@
         {% csrf_token %}
         <div class="panel-group" id="questions_group">
             {% for form in forms %}
-                <details class="panel panel-default">
+                <details class="panel panel-default" open>
                     <summary class="panel-heading">
                         <h4 class="panel-title">
                             <strong>{{ form.item.name }}{% if form.variation %}
