Allow to require invoice name only

--- a/src/pretix/control/templates/pretixcontrol/order/index.html
+++ b/src/pretix/control/templates/pretixcontrol/order/index.html
@@ -349,7 +349,7 @@
             </div>
             {% eventsignal event "pretix.control.signals.order_info" order=order request=request %}
             <div class="row">
-                <div class="{% if request.event.settings.invoice_address_asked %}col-md-6{% else %}col-md-12{% endif %}">
+                <div class="{% if request.event.settings.invoice_address_asked or order.invoice_address %}col-md-6{% else %}col-md-12{% endif %}">
                     <div class="panel panel-default items">
                         <div class="panel-heading">
                             <h3 class="panel-title">
@@ -371,7 +371,7 @@
                         </div>
                     </div>
                 </div>
-                {% if request.event.settings.invoice_address_asked %}
+                {% if request.event.settings.invoice_address_asked or order.invoice_address %}
                     <div class="col-md-6">
                         <div class="panel panel-default">
                             <div class="panel-heading">
