--- a/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_confirm.html
@@ -120,6 +120,12 @@
                         </h3>
                     </div>
                     <div class="panel-body">
+                        {% if not event.settings.invoice_address_asked and event.settings.invoice_name_required %}
+                            <dl class="dl-horizontal">
+                                <dt>{% trans "Name" %}</dt>
+                                <dd>{{ addr.name }}</dd>
+                            </dl>
+                        {% endif %}
                         {% for l, v in contact_info %}
                             <dl class="dl-horizontal">
                                 <dt>{{ l }}</dt>
