--- a/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
+++ b/src/pretix/presale/templates/pretixpresale/event/checkout_questions.html
@@ -21,6 +21,9 @@
                 <div id="contact">
                     <div class="panel-body">
                         {% bootstrap_form contact_form layout="horizontal" %}
+                        {% if not event.settings.invoice_address_asked and event.settings.invoice_name_required %}
+                            {% bootstrap_form invoice_form layout="horizontal" %}
+                        {% endif %}
                     </div>
                 </div>
             </details>
