--- a/src/pretix/presale/templates/pretixpresale/event/order.html
+++ b/src/pretix/presale/templates/pretixpresale/event/order.html
@@ -120,7 +120,7 @@
     {% eventsignal event "pretix.presale.signals.order_info" order=order %}
     <div class="row">
         {% if invoices %}
-            <div class="col-xs-12 {% if request.event.settings.invoice_address_asked %}col-md-6{% endif %}">
+            <div class="col-xs-12 {% if request.event.settings.invoice_address_asked or request.event.settings.invoice_name_required %}col-md-6{% endif %}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -141,7 +141,7 @@
                 </div>
             </div>
         {% elif can_generate_invoice %}
-            <div class="col-xs-12 {% if request.event.settings.invoice_address_asked %}col-md-6{% endif %}">
+            <div class="col-xs-12 {% if request.event.settings.invoice_address_asked or request.event.settings.invoice_name_required %}col-md-6{% endif %}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
                         <h3 class="panel-title">
@@ -160,7 +160,7 @@
                 </div>
             </div>
         {% endif %}
-        {% if request.event.settings.invoice_address_asked %}
+        {% if request.event.settings.invoice_address_asked or request.event.settings.invoice_name_required %}
             <div class="col-xs-12 {% if invoices or can_generate_invoice %}col-md-6{% endif %}">
                 <div class="panel panel-primary">
                     <div class="panel-heading">
@@ -173,27 +173,35 @@
                             </div>
                         {% endif %}
                         <h3 class="panel-title">
-                            {% trans "Invoice information" %}
+                            {% if request.event.settings.invoice_address_asked %}
+                                {% trans "Invoice information" %}
+                            {% else %}
+                                {% trans "Contact information" %}
+                            {% endif %}
                         </h3>
                     </div>
                     <div class="panel-body">
                         <dl class="dl-horizontal">
-                            <dt>{% trans "Company" %}</dt>
-                            <dd>{{ order.invoice_address.company }}</dd>
+                            {% if request.event.settings.invoice_address_asked %}
+                                <dt>{% trans "Company" %}</dt>
+                                <dd>{{ order.invoice_address.company }}</dd>
+                            {% endif %}
                             <dt>{% trans "Name" %}</dt>
                             <dd>{{ order.invoice_address.name }}</dd>
-                            <dt>{% trans "Address" %}</dt>
-                            <dd>{{ order.invoice_address.street|linebreaksbr }}</dd>
-                            <dt>{% trans "ZIP code and city" %}</dt>
-                            <dd>{{ order.invoice_address.zipcode }} {{ order.invoice_address.city }}</dd>
-                            <dt>{% trans "Country" %}</dt>
-                            <dd>{{ order.invoice_address.country.name|default:order.invoice_address.country_old }}</dd>
-                            {% if request.event.settings.invoice_address_vatid %}
-                                <dt>{% trans "VAT ID" %}</dt>
-                                <dd>{{ order.invoice_address.vat_id }}</dd>
+                            {% if request.event.settings.invoice_address_asked %}
+                                <dt>{% trans "Address" %}</dt>
+                                <dd>{{ order.invoice_address.street|linebreaksbr }}</dd>
+                                <dt>{% trans "ZIP code and city" %}</dt>
+                                <dd>{{ order.invoice_address.zipcode }} {{ order.invoice_address.city }}</dd>
+                                <dt>{% trans "Country" %}</dt>
+                                <dd>{{ order.invoice_address.country.name|default:order.invoice_address.country_old }}</dd>
+                                {% if request.event.settings.invoice_address_vatid %}
+                                    <dt>{% trans "VAT ID" %}</dt>
+                                    <dd>{{ order.invoice_address.vat_id }}</dd>
+                                {% endif %}
+                                <dt>{% trans "Internal Reference" %}</dt>
+                                <dd>{{ order.invoice_address.internal_reference }}</dd>
                             {% endif %}
-                            <dt>{% trans "Internal Reference" %}</dt>
-                            <dd>{{ order.invoice_address.internal_reference }}</dd>
                         </dl>
                     </div>
                 </div>
