--- a/src/pretix/static/pretixpresale/scss/_event.scss
+++ b/src/pretix/static/pretixpresale/scss/_event.scss
@@ -64,6 +64,9 @@
         margin: 0;
         line-height: inherit;
     }
+    .price del {
+        color: $brand-danger;
+    }
 }
 
 .radio .variation-description {
