--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -288,6 +288,9 @@
                                                     {% endif %}
                                                 </div>
                                                 <div class="col-md-2 col-xs-6 price">
+                                                    {% if item.original_price %}
+                                                        <del>{{ item.original_price|money:event.currency }}</del>
+                                                    {% endif %}
                                                     {% if item.free_price %}
                                                         <div class="input-group input-group-price">
                                                             <span class="input-group-addon">{{ event.currency }}</span>
@@ -383,6 +386,9 @@
                                         </div>
                                     </div>
                                     <div class="col-md-2 col-xs-6 price">
+                                        {% if item.original_price %}
+                                            <del>{{ item.original_price|money:event.currency }}</del>
+                                        {% endif %}
                                         {% if item.free_price %}
                                             <div class="input-group input-group-price">
                                                 <span class="input-group-addon">{{ event.currency }}</span>
