--- a/src/pretix/presale/templates/pretixpresale/event/index.html
+++ b/src/pretix/presale/templates/pretixpresale/event/index.html
@@ -290,6 +290,7 @@
                                                 <div class="col-md-2 col-xs-6 price">
                                                     {% if item.original_price %}
                                                         <del>{{ item.original_price|money:event.currency }}</del>
+                                                        <ins>
                                                     {% endif %}
                                                     {% if item.free_price %}
                                                         <div class="input-group input-group-price">
@@ -309,6 +310,9 @@
                                                         {{ var.display_price.net|money:event.currency }}
                                                     {% else %}
                                                         {{ var.display_price.gross|money:event.currency }}
+                                                    {% endif %}
+                                                    {% if item.original_price %}
+                                                        </ins>
                                                     {% endif %}
                                                     {% if var.display_price.rate and var.display_price.gross and event.settings.display_net_prices %}
                                                         <small>{% blocktrans trimmed with rate=var.display_price.rate name=var.display_price.name %}
@@ -388,6 +392,7 @@
                                     <div class="col-md-2 col-xs-6 price">
                                         {% if item.original_price %}
                                             <del>{{ item.original_price|money:event.currency }}</del>
+                                            <ins>
                                         {% endif %}
                                         {% if item.free_price %}
                                             <div class="input-group input-group-price">
@@ -405,6 +410,9 @@
                                             {{ item.display_price.net|money:event.currency }}
                                         {% else %}
                                             {{ item.display_price.gross|money:event.currency }}
+                                        {% endif %}
+                                        {% if item.original_price %}
+                                            </ins>
                                         {% endif %}
                                         {% if item.display_price.rate and item.display_price.gross and event.settings.display_net_prices %}
                                             <small>{% blocktrans trimmed with rate=item.display_price.rate name=item.display_price.name %}
