--- a/src/pretix/presale/templates/pretixpresale/event/fragment_subevent_list.html
+++ b/src/pretix/presale/templates/pretixpresale/event/fragment_subevent_list.html
@@ -1,6 +1,6 @@
 {% load i18n %}
 {% load eventurl %}
-{% for subev in event.active_future_subevents %}
+{% for subev in event.subevent_list_subevents %}
     <a href="{% eventurl event "presale:event.index" subevent=subev.id cart_namespace=cart_namespace %}"
             class="subevent-row">
         <div class="row">
