--- a/src/pretix/control/templates/pretixcontrol/order/change.html
+++ b/src/pretix/control/templates/pretixcontrol/order/change.html
@@ -150,7 +150,7 @@
         <div class="panel panel-default items">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                    Add product
+                    {% trans "Add product" %}
                 </h3>
             </div>
             <div class="panel-body">
@@ -176,7 +176,7 @@
         <div class="panel panel-default items">
             <div class="panel-heading">
                 <h3 class="panel-title">
-                    Other operations
+                    {% trans "Other operations" %}
                 </h3>
             </div>
             <div class="panel-body">
