--- a/src/pretix/control/templates/pretixcontrol/user/settings.html
+++ b/src/pretix/control/templates/pretixcontrol/user/settings.html
@@ -54,7 +54,16 @@
             </div>
         </div>
         <div class="form-group">
-            <label class="col-md-3 control-label" for="id_new_pw_repeat">{% trans "Account history" %}</label>
+            <label class="col-md-3 control-label" for="">{% trans "Authorized applications" %}</label>
+            <div class="col-md-9 static-form-row">
+                <a href="{% url "control:user.settings.oauth.list" %}">
+                    <span class="fa fa-plug"></span>
+                    {% trans "Show applications" %}
+                </a>
+            </div>
+        </div>
+        <div class="form-group">
+            <label class="col-md-3 control-label" for="">{% trans "Account history" %}</label>
             <div class="col-md-9 static-form-row">
                 <a href="{% url "control:user.settings.history" %}">
                     <span class="fa fa-history"></span>
