--- a/src/pretix/control/templates/pretixcontrol/event/display.html
+++ b/src/pretix/control/templates/pretixcontrol/event/display.html
@@ -11,6 +11,9 @@
             {% bootstrap_field form.logo_image layout="control" %}
             {% bootstrap_field form.frontpage_text layout="control" %}
             {% bootstrap_field form.show_variations_expanded layout="control" %}
+            {% if form.frontpage_subevent_ordering %}
+                {% bootstrap_field form.frontpage_subevent_ordering layout="control" %}
+            {% endif %}
         </fieldset>
         <fieldset>
             <legend>{% trans "Shop design" %}</legend>
