--- a/src/pretix/control/templates/pretixcontrol/event/payment.html
+++ b/src/pretix/control/templates/pretixcontrol/event/payment.html
@@ -46,6 +46,7 @@
         </fieldset>
         <fieldset>
             <legend>{% trans "General payment settings" %}</legend>
+            {% bootstrap_form_errors form layout="control" %}
             {% bootstrap_field form.payment_term_days layout="control" %}
             {% bootstrap_field form.payment_term_last layout="control" %}
             {% bootstrap_field form.payment_term_weekdays layout="control" %}
