--- a/src/pretix/static/pretixcontrol/scss/_forms.scss
+++ b/src/pretix/static/pretixcontrol/scss/_forms.scss
@@ -98,6 +98,7 @@ div[data-formset-body], div[data-formset-form], div[data-nested-formset-form], d
   list-style: none;
   margin-left: 0;
   padding-left: 0;
+  margin-bottom: 0;
 }
 
 .question-option-row {
