--- a/src/pretix/control/templates/pretixcontrol/oauth/authorized.html
+++ b/src/pretix/control/templates/pretixcontrol/oauth/authorized.html
@@ -4,35 +4,55 @@
 {% block title %}{% trans "Authorized applications" %}{% endblock %}
 {% block content %}
     <h1>{% trans "Authorized applications" %}</h1>
-    {% if applications %}
+    <p>
+        <a href="{% url "control:user.settings.oauth.apps" %}" class="btn btn-default">
+            {% trans "Manage your own apps" %}
+        </a>
+    </p>
+    {% if tokens %}
         <div class="table-responsive">
-            <table class="table table-condensed table-hover">
+            <table class="table table-condensed table-hover table-quotas">
                 <thead>
                 <tr>
                     <th>{% trans "Name" %}</th>
+                    <th>{% trans "Permissions" %}</th>
+                    <th>{% trans "Organizers" %}</th>
                     <th class="action-col-2"></th>
                 </tr>
                 </thead>
                 <tbody>
-                {% for application in applications %}
+                {% for token in tokens %}
                     <tr>
-                        <td><strong><a href="{% url "control:user.settings.oauth.app" pk=application.pk %}">{{ application.name }}</a></strong></td>
+                        <td><strong>{{ token.application.name }}</strong></td>
+                        <td>
+                            <ul>
+                                {% for scope in token.scopes_descriptions %}
+                                    <li>
+                                        {{ scope }}
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
+                        <td>
+                            <ul>
+                                {% for o in token.organizers.all %}
+                                    <li>
+                                        <a href="{% url "control:organizer" organizer=o.slug %}">
+                                            {{ o.name }}
+                                        </a>
+                                    </li>
+                                {% endfor %}
+                            </ul>
+                        </td>
                         <td class="text-right">
-                            <a href="{% url "control:user.settings.oauth.app" pk=application.pk %}" class="btn btn-default btn-sm"><i class="fa fa-edit"></i></a>
-                            <a href="{% url "control:user.settings.oauth.app.roll" pk=application.pk %}" class="btn btn-default btn-sm"><i class="fa fa-repeat"></i></a>
-                            <a href="{% url "control:user.settings.oauth.app.disable" pk=application.pk %}" class="btn btn-danger btn-sm"><i class="fa fa-trash"></i></a>
+                            <a href="{% url "control:user.settings.oauth.revoke" pk=token.pk %}"
+                               class="btn btn-danger btn-sm">{% trans "Revoke access" %}</a>
                         </td>
                     </tr>
                 {% endfor %}
                 </tbody>
             </table>
         </div>
-        <p>
-            <a class="btn btn-primary" href="{% url "control:user.settings.oauth.apps.register" %}">
-                <span class="fa fa-plus"></span>
-                {% trans "Create new application" %}
-            </a>
-        </p>
     {% else %}
         <div class="empty-collection">
             <p>
